tests/NormalTests/paczka1/fuzzy1/80072106.err
Error in line 16: gXwQTx A183 -1,0
Error in line 22: A31 S508 84,1
Error in line 23: A31 A31 10,8
Error in line 26: FZU2PVE A183 96,7
Error in line 19: i2IyHNWS A31 41,6
Error in line 24: A31 S508 99,1
Error in line 21: iro29fAf2 S508 90,6
